# velto

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yml
.github/workflows/: release.yml  rust.yml
examples/: homepage.rs  include.rs  inheritance.rs  live_reload.rs  method_inspect.rs  redirect.rs  signup.rs  test_request.rs
src/: app.rs  dev.rs  form.rs  http_method.rs  lib.rs  macros.rs  middleware.rs  prelude.rs  reload.rs  response.rs  router.rs  template.rs  test.rs  util.rs
static/: ind.html  note.md
templates/: child.html  index.html  note.md  page.html  signup.html
tests/: example_test.rs  velto_tests.rs
