[package]
name = "velto"
version = "0.1.2"
edition = "2021"
authors = ["Pjdur"]
description = "Velto: expressive, modern, and grounded Rust framework"
license = "MIT"
repository = "https://github.com/pjdur/velto"
documentation = "https://docs.rs/velto"
keywords = ["framework", "rust", "modern", "expressive"]
categories = ["development-tools", "web-programming"]
readme = "README.md"

[dependencies]
regex = "1.11.1"
tiny_http = "0.12.0"
