[package]
name = "velto"
version = "1.8.0"
edition = "2021"
authors = ["Pjdur"]
description = "Velto: expressive, async-native, and grounded Rust framework"
license = "MIT"
repository = "https://github.com/pjdur/velto"
documentation = "https://docs.rs/velto"
keywords = ["framework", "rust", "async", "web", "expressive"]
categories = ["development-tools", "web-programming"]
readme = "README.md"

[dependencies]
regex = "1.11.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
tungstenite = "0.28"
notify = "8.2.0"
futures-util = "0.3.31"
async_tiny = "0.4.0"
pathx = "0.1.0"
http = "1.3.1"
urlencoding = "2.1"

[dev-dependencies]
velto = { path = "." }
